# PixelCanvas

./: .gitignore  CMakeLists.txt  PixelCanvas.paint  README.md  placeholder.txt
src/: BrushEngine.cpp  BrushEngine.h  BrushPreviewWidget.cpp  BrushPreviewWidget.h  BrushSettings.h  BrushTip.cpp  BrushTip.h  CanvasWidget.cpp  CanvasWidget.h  Filter.h  FilterImpls.cpp  Layer.h  LayerPanel.cpp  LayerStack.cpp  MainWindow.cpp  MainWindow.h  MainWindowDocks.cpp  MainWindowFilters.cpp  ProjectIO.h  ToolbarPanel.cpp  ToolbarPanel.h  UndoStack.cpp  app.desktop  main.cpp
src/GoogleDrive/: GoogleDriveClient.cpp  GoogleDriveClient.h
src/brush/: BrushEngine.cpp  BrushEngine.h  BrushSettings.h  BrushTip.cpp  BrushTip.h
src/canvas/: CanvasWidget.cpp  CanvasWidget.h  Stroke.h  StrokeRecorder.h
src/filters/: Filter.h  FilterImpls.cpp
src/io/: ProjectIO.cpp  ProjectIO.h  ProjectIO_scratchpad_additions.cpp
src/layers/: Layer.h  LayerStack.cpp  LayerStack.h  UndoStack.cpp  UndoStack.h
src/ui/: AppStyleSheet.h  ColorPanelWidget.cpp  ColorPanelWidget.h  ColorSlidersWidget.cpp  ColorSlidersWidget.h  ColorSwatchWidget.cpp  ColorSwatchWidget.h  ColorWheelWidget.cpp  ColorWheelWidget.h  LayerPanel.cpp  LayerPanel.h  MainWindow.cpp  MainWindow.h  MainWindowCanvas.cpp  MainWindowDocks.cpp  MainWindowFilters.cpp  MainWindowPlayback.cpp  MannequinWindow.cpp  MannequinWindow.h  PinterestWindow.cpp  PinterestWindow.h  PlaybackWindow.cpp  PlaybackWindow.h  ScratchPadWidget.cpp  ScratchPadWidget.h  ToolbarPanel.cpp  ToolbarPanel.h
